# dory-memory

./: .dockerignore  .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  compose.yml  dory.toml  rust-toolchain.toml
.github/workflows/: release-prepare.yml  release.yml
migrations/: 0001_init_dory.sql
plugins/memory/dory/: README.md  __init__.py  cli.py  plugin.yaml
src/: cache.rs  config.rs  embed.rs  engine.rs  error.rs  guard.rs  main.rs  models.rs  routes.rs  telemetry.rs  workers.rs
