[package]
name = "dory-memory"
version = "0.1.1"
description = "Backend memory store for Hermes Agent — pgvector-powered semantic memory engine with server-side embeddings"
license = "MIT"
repository = "https://github.com/atareao/dory-memory"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pgvector = { version = "0.4", features = ["sqlx"] }
tiktoken-rs = "0.6"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
notify = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
regex = "1"